shortyqr/kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 2 # Run 2 instances for scalability
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          # IMPORTANT: Replace with your Docker Hub username!
          image: "akhilrachakonda2004347/shortyqr-backend:latest"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: db-storage
              # Mount the persistent volume at /app/data where the DB is stored
              mountPath: /app/data
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: shorty-db-pvc
