shortyqr/kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 2 # Run 2 instances for scalability
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          # IMPORTANT: Replace with your Docker Hub username!
          image: "akhilrachakonda2004347/shortyqr-frontend:latest"
          ports:
            - containerPort: 80
