shortyqr/kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend # Selects pods with the 'app: backend' label
  ports:
    - protocol: TCP
      port: 8080 # The port the service will be available on
      targetPort: 8080 # The port the container is running on
