shortyqr/kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend # Selects pods with the 'app: frontend' label
  ports:
    - protocol: TCP
      port: 80 # The port the service will be available on
      targetPort: 80 # The port the container is running on
